--- a/properties.html
+++ b/properties.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Properties - EstateAgency Bootstrap Template</title>
+  <title>Properties - VSS Housing (P) Ltd.</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -26,14 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: EstateAgency
-  * Template URL: https://bootstrapmade.com/real-estate-agency-bootstrap-template/
-  * Updated: Aug 09 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="properties-page">
@@ -44,7 +36,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Estate<span>Agency</span></h1>
+        <h1 class="sitename">VSS<span>Housing</span></h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -53,7 +45,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="properties.html" class="active">Properties</a></li>
-          <li><a href="agents.html">Agents</a></li>
+          <li><a href="directors.html">Directors</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
@@ -139,7 +131,7 @@
               <img src="assets/img/properties/property-2.jpg" alt="" class="img-fluid">
               <div class="card-body">
                 <span class="sale-rent">Sale | $350.000</span>
-                <h3><a href="property-single.html" class="stretched-link">647 Molie Road</a></h3>
+                <h3><a href="property-single2.html" class="stretched-link">647 Molie Road</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -187,7 +179,7 @@
               <img src="assets/img/properties/property-4.jpg" alt="" class="img-fluid">
               <div class="card-body">
                 <span class="sale-rent">Rent | $6500</span>
-                <h3><a href="property-single.html" class="stretched-link">117 Milk Road</a></h3>
+                <h3><a href="property-single2.html" class="stretched-link">117 Milk Road</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -235,7 +227,7 @@
               <img src="assets/img/properties/property-6.jpg" alt="" class="img-fluid">
               <div class="card-body">
                 <span class="sale-rent">Sale | $650.000</span>
-                <h3><a href="property-single.html" class="stretched-link">974 Denim Road</a></h3>
+                <h3><a href="property-single2.html" class="stretched-link">974 Denim Road</a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
                   <div class="row propery-info">
                     <div class="col">Area</div>
@@ -262,7 +254,7 @@
 
   </main>
 
-  <footer id="footer" class="footer light-background">
+    <footer id="footer" class="footer light-background">
 
     <div class="container">
       <div class="row gy-3">
@@ -270,8 +262,8 @@
           <i class="bi bi-geo-alt icon"></i>
           <div class="address">
             <h4>Address</h4>
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
+            <p>Jankipuram Colony, Opposite-s. S. P. Bungalow, Civil Lines</p>
+            <p>Jhansi-284001, Uttar Pradesh, India</p>
             <p></p>
           </div>
 
@@ -282,7 +274,7 @@
           <div>
             <h4>Contact</h4>
             <p>
-              <strong>Phone:</strong> <span>+1 5589 55488 55</span><br>
+              <strong>Phone:</strong> <span>+91 9935531136</span><br>
               <strong>Email:</strong> <span>info@example.com</span><br>
             </p>
           </div>
@@ -313,13 +305,13 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">EstateAgency</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">VSS Housing (P) Ltd.</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://github.com/ShreshtJain">Jain & Sons(No daughters !!) </a>
       </div>
     </div>
 
