Contact Form Commit

--- a/contact_og.html
+++ b/contact_og.html
@@ -147,9 +147,7 @@
           </div>
 
           <div class="col-lg-8">
-<form name="contact" method="POST" data-netlify="true" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-  <input type="hidden" name="form-name" value="contact">
-
+            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -169,10 +167,9 @@
                 </div>
 
                 <div class="col-md-12 text-center">
-   <div class="loading">Loading</div>
-<div class="error-message">Something went wrong. Please try again later.</div>
-<div class="sent-message">Your message has been sent. Thank you!</div>
-
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div>
 
                   <button type="submit">Send Message</button>
                 </div>
