Fixing Bi-icons

--- a/services.html
+++ b/services.html
@@ -118,7 +118,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item  position-relative">
               <div class="icon">
-                <i class="bi bi-activity"></i>
+                <i class="bi bi-hammer"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
                 <h3>Construction Service</h3>
@@ -130,7 +130,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-broadcast"></i>
+                <i class="bi bi-house-fill"></i>
+                <i class="bi bi-tree-fill"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
                 <h3>Farmhouse Construction Service</h3>
@@ -154,7 +155,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-bounding-box-circles"></i>
+                <i class="bi bi-people"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
                 <h3>Joint Venture Construction Service</h3>
@@ -167,10 +168,10 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-calendar4-week"></i>
+                <i class="bi bi-compass"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Construction Service</h3>
+                <h3>Vastu Consultancy Service</h3>
               </a>
               <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
               <a href="service-details.html" class="stretched-link"></a>
@@ -180,7 +181,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-chat-square-text"></i>
+                <i class="bi bi-buildings"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
                 <h3>Architecture Service</h3>
