--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.png" alt=""> 
-        <h1 class="sitename">VSS<span>Housing</span></h1>
+        <img id="logo1" src="assets/img/logo.png" alt=""> 
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -90,6 +89,7 @@
     <section id="hero" class="hero section dark-background">
 
       <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+        
 
         <div class="carousel-item active">
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
@@ -144,7 +144,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Our Services</h2>
-        <p>Real Estate / Builders / Contractors of a wide range of products which include Construction Service, Farmhouse Construction Service, Interior Designing Services and Joint Venture Construction Service.</p>
+        <p>
+          <i>From land to lifestyle — we deliver secure, well-planned real estate and hospitality services designed for growth, comfort, and peace of mind.</i>
+        </p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -154,49 +156,44 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item  position-relative">
               <div class="icon">
-                <i class="bi bi-hammer"></i>
+                <i class="bi bi-house"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Construction Service</h3>
+                <h3>Group Housing Construction</h3>
               </a>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-tree-fill"></i>
-                <i class="bi bi-house-fill"></i>
+                <i class="bi bi-key-fill"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Farmhouse Construction Service</h3>
+                <h3>Rental & Leasing</h3>
               </a>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-easel"></i>
+                <i class="bi bi-buildings"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Interior Designing Service</h3>
+                <h3>Commercial Construction</h3>
               </a>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-people"></i>
+                <i class="bi bi-currency-rupee"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Joint Venture Construction Service</h3>
+                <h3>Investment Advisory </h3>
               </a>
-              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
               <a href="service-details.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -204,12 +201,11 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-compass"></i>
+                <i class="bi bi-people"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Vastu Consultancy Service</h3>
+               <h3>Joint Venture Construction</h3>
               </a>
-              <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
               <a href="service-details.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -217,12 +213,11 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-buildings"></i>
+                 <i class="bi bi-hammer"></i>
               </div>
               <a href="service-details.html" class="stretched-link">
-                <h3>Architecture Service</h3>
+                <h3>Site Planning & Plotting</h3>
               </a>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
               <a href="service-details.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -234,14 +229,12 @@
     </section><!-- /Services Section -->
 
     <!-- Directors Section -->
-    <section id="agents" class="agents section">
+    <!--<section id="agents" class="agents section">
 
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Our Directors</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
-
+      </div>
       <div class="container">
 
         <div class="row gy-5">
@@ -260,7 +253,7 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
@@ -276,7 +269,7 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
@@ -292,13 +285,88 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Directors Section -->
+    </section> -->
+    <!-- /Directors Section -->
+
+    <!-- Stats Section -->
+    <section id="stats" class="stats section">
+
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Our Journey</h2>
+        <p>
+          <i>From humble beginnings to trusted name — our journey reflects growth, trust, and a commitment to lasting relationships.</i>
+        </p>
+      </div>
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-3 col-md-6">
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+              <i class="bi bi-emoji-smile color-blue flex-shrink-0"></i>
+              <div>
+                <span data-purecounter-start="0"
+                  data-purecounter-end="1000"
+                  data-purecounter-duration="1"
+                  class="purecounter plusplus"></span>
+                <p>Happy Clients</p>
+              </div>
+
+            </div>
+          </div><!-- End Stats Item -->
+
+          <div class="col-lg-3 col-md-6">
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+              <i class="bi bi-journal-richtext color-orange flex-shrink-0"></i>
+              <div>
+                <span data-purecounter-start="0" 
+                data-purecounter-end="25" 
+                data-purecounter-duration="1" 
+                class="purecounter plusplus"></span>
+                <p>Projects</p>
+              </div>
+            </div>
+          </div><!-- End Stats Item -->
+
+          <div class="col-lg-3 col-md-6">
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+              <i class="bi bi-rulers color-green flex-shrink-0"></i>
+              <div>
+                <span data-purecounter-start="0" 
+                data-purecounter-end="400" 
+                data-purecounter-duration="1" 
+                class="purecounter plusplus"></span>
+                <p>Acres Developed </p>
+              </div>
+            </div>
+          </div><!-- End Stats Item -->
+
+          <div class="col-lg-3 col-md-6">
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+              <i class="bi bi-people color-pink flex-shrink-0"></i>
+              <div>
+                <span data-purecounter-start="0" 
+                data-purecounter-end="500" 
+                data-purecounter-duration="1" 
+                class="purecounter plusplus"></span>
+                <p>Hard Workers</p>
+              </div>
+            </div>
+          </div><!-- End Stats Item -->
+
+        </div>
+
+      </div>
+
+    </section><!-- /Stats Section -->
+
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section">
@@ -449,8 +517,8 @@
           <div>
             <h4>Contact</h4>
             <p>
-              <strong>Phone:</strong> <span>+91 9935531136</span><br>
-              <strong>Email:</strong> <span>info@example.com</span><br>
+              <strong>Phone:</strong> <span>+91-9935531136</span><br>
+              <strong>Email:</strong> <span>vsshousinggroup@yahoo.com</span><br>
             </p>
           </div>
         </div>
@@ -460,19 +528,21 @@
           <div>
             <h4>Opening Hours</h4>
             <p>
-              <strong>Mon-Sat:</strong> <span>11AM - 23PM</span><br>
+              <strong>Mon-Sat:</strong> <span>10AM - 06PM</span><br>
               <strong>Sunday</strong>: <span>Closed</span>
             </p>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6">
-          <h4>Follow Us</h4>
-          <div class="social-links d-flex">
-            <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <div class="col-lg-3 col-md-6 d-flex">
+          <i class="bi bi-person-add icon"></i>
+          <div>
+            <h4>Follow Us</h4>
+            <div class="social-links d-flex">
+              <a href="https://www.facebook.com/share/15ptxfmaSd/?mibextid=wwXIfr" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/vsshousinggroup?igsh=am5wczAxaW5weHJ6&utm_source=qr" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/vss-housing-private-limited/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            </div>
           </div>
         </div>
 
