--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.png" alt=""> 
-        <h1 class="sitename">VSS<span>Housing</span></h1>
+        <img id="logo1" src="assets/img/logo.png" alt=""> 
+        <!-- <h1 class="sitename">VSS<span>Housing</span></h1> -->
       </a>
 
       <nav id="navmenu" class="navmenu">
