--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.png" alt="">
+        <img id="logo1" src="assets/img/logo.png" alt="">
         <h1 class="sitename">VSS<span>Housing</span></h1>
       </a>
 
